--- a/Adventures at Midnight.html
+++ b/Adventures at Midnight.html
@@ -21,11 +21,11 @@ p.customfont {
 }
 </style>
     <body>
-     <font size = "4" font color = "white" align="left"><p class="customfont"> ADVENTURES AT MIDNIGHT...<img width="50" length="50" align= "right" src="logo.png"></p> 
+     <font size = "4" font color = "white" align="left"><p class="customfont"> ADVENTURES AT MIDNIGHT...</p> 
  <br>
     <table align="center" cellspacing="30">
         <tr align="center">
-          <th><img width="141" length="169" src="p1.jpg"alt=""></th>
+          <th><img width="141" length="169" src="p1.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p2.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p3.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p4.jpg"alt=""/></th>
@@ -53,7 +53,9 @@ p.customfont {
         <tr align="center">
           <th><img width="141" length="169" src="p7.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p8.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p9.jpg"alt=""/></th>
+          <th><form action="page_2.html">
+              <input type="image" width="141" length="169" src="p9.jpg"alt="">
+              </form></th>
           <th><img width="141" length="169" src="p10.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p11.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p12.jpg"alt=""/></th>
