--- a/Adventures at Midnight.html
+++ b/Adventures at Midnight.html
@@ -53,7 +53,7 @@ p.customfont {
         <tr align="center">
           <th><img width="141" length="169" src="p7.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p8.jpg"alt=""/></th>
-          <th><form action="page_2.html">
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_2.html">
               <input type="image" width="141" length="169" src="p9.jpg"alt="">
               </form></th>
           <th><img width="141" length="169" src="p10.jpg"alt=""/></th>
