--- a/Adventures at Midnight.html
+++ b/Adventures at Midnight.html
@@ -30,7 +30,9 @@ p.customfont {
           <th><img width="141" length="169" src="p3.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p4.jpg"alt=""/></th>
           <th><img width="141" length="169" src="p5.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p6.jpg"alt=""/></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_3.html">
+              <input type="image" width="141" length="169" src="p6.jpg"alt="">
+              </form></th>
         </tr>
         <tr align="center">
             <td><font size = "2" font color = "white"><p class="customfont">come skate with me</p></font></td>
