--- a/Adventures at Midnight.html
+++ b/Adventures at Midnight.html
@@ -25,11 +25,21 @@ p.customfont {
  <br>
     <table align="center" cellspacing="30">
         <tr align="center">
-          <th><img width="141" length="169" src="p1.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p2.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p3.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p4.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p5.jpg"alt=""/></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_6.html">
+              <input type="image" width="141" length="169" src="p1.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_7.html">
+              <input type="image" width="141" length="169" src="p2.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_8.html">
+              <input type="image" width="141" length="169" src="p3.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_9.html">
+              <input type="image" width="141" length="169" src="p4.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_10.html">
+              <input type="image" width="141" length="169" src="p5.jpg"alt="">
+              </form></th>
           <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_3.html">
               <input type="image" width="141" length="169" src="p6.jpg"alt="">
               </form></th>
@@ -53,14 +63,24 @@ p.customfont {
         </tr>
         
         <tr align="center">
-          <th><img width="141" length="169" src="p7.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p8.jpg"alt=""/></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_5.html">
+              <input type="image" width="141" length="169" src="p7.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_11.html">
+              <input type="image" width="141" length="169" src="p8.jpg"alt="">
+              </form></th>
           <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_2.html">
               <input type="image" width="141" length="169" src="p9.jpg"alt="">
               </form></th>
-          <th><img width="141" length="169" src="p10.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p11.jpg"alt=""/></th>
-          <th><img width="141" length="169" src="p12.jpg"alt=""/></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_12.html">
+              <input type="image" width="141" length="169" src="p10.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_4.html">
+              <input type="image" width="141" length="169" src="p11.jpg"alt="">
+              </form></th>
+          <th><form action="https://isabellecanadine.github.io/meet-me-at-the-rooftop/page_13.html">
+              <input type="image" width="141" length="169" src="p12.jpg"alt="">
+              </form></th>
         </tr>
         
         <tr align="center">
