--- a/page_2.html
+++ b/page_2.html
@@ -159,7 +159,7 @@ p.customfont {
     <img src="ripp.png" class="rip" width="80" length="100">
     <img src="record.gif" class="record" width="420" length="420">
     <video class="video" width="195" height="200" controls><source src="aesthetic.mp4" type="video/mp4"></video>
-    <audio class="song" style="width:200px;height:40px" src="you2.mp3" type="audio/mpeg" controls></audio>
+    <audio class="song" src="you2.mp3" type="audio/mpeg" controls></audio>
     <font class="title" size = "5" font color = "white"><p class="customfont">YOU</p></font>
     <font class="explain1" size = "2" font color = "white"><p class="customfont">blah blah blah explaining my life, idk, whatever i want<br> to put here.</p></font>
     <font class="caption" size = "2" font color = "white"><p class="customfont">A confession written on a plane about a boy that wouldn't get out of my head</p></font>
