--- a/page_2.html
+++ b/page_2.html
@@ -73,6 +73,9 @@ body {
       position: absolute;
       top: 0px;
       left: 1165px;
+      box-shadow: 5px 5px 20px rgba(0,0, 0, 0.4);
+      border-radius: 90px;
+      transform: scale(1.05);
     }
         
         
