--- a/page_10.html
+++ b/page_10.html
@@ -137,5 +137,5 @@ p.customfont {
     <img src="iphone.png" class="iphone"  width="450" length="680"/>
     <img src="retro.gif" class="retro"  width="325" length="680"/>
     <img src="frame.png" class="frame"  width="290" length="680"/>
-    <video class="babyy" width="260" height="260" controls><source src="babyy.mp4" type="video/mp4"></video>
+    <video class="babyy" width="260" height="260" controls autoplay><source src="babyy.mp4" type="video/mp4"></video>
     <audio class="sex" style="width:400px;height:50px" src="sex.mp3" type="audio/mpeg" controls></audio>
