--- a/page_11.html
+++ b/page_11.html
@@ -128,5 +128,5 @@ p.customfont {
     <img src="street.png" class="street"  width="100" length="680"/>
     <img src="gameboy.png" class="gameboy"  width="510" length="680"/>
     <img src="cassette.png" class="cassette"  width="300" length="680"/>
-    <video class="hearty" width="168" height="168" controls><source src="hearty.mp4" type="video/mp4"></video> 
+    <video class="hearty" width="168" height="168" controls autoplay><source src="hearty.mp4" type="video/mp4"></video> 
     <audio class="looking" style="width:230px;height:15px" src="looking.mp3" type="audio/mpeg" controls></audio>
