--- a/page_12.html
+++ b/page_12.html
@@ -121,5 +121,5 @@ p.customfont {
     <img src="anime.png" class="anime"  width="300" length="680"/>
     <img src="headphones.gif" class="headphones"  width="240" length="680"/>
     <img src="puter.png" class="puter"  width="480" length="680"/>
-    <video class="culture" width="158" height="89" controls><source src="culture.mp4" type="video/mp4"></video>
+    <video class="culture" width="158" height="89" controls autoplay><source src="culture.mp4" type="video/mp4"></video>
     <audio class="yours" style="width:230px;height:15px" src="yours.mp3" type="audio/mpeg" controls></audio>
