--- a/page_13.html
+++ b/page_13.html
@@ -151,7 +151,7 @@ p.customfont {
  <img src="vans.png" class="vans" width="310" length="680"/>   
  <img src="run.gif" class="run" width="379" length="680"/>
  <img src="date.png" class="date" width="470" length="680"/>
- <video class="msg" width="184" height="202" controls><source src="msg.mp4" type="video/mp4"></video> <audio class="venom" style="width:230px;height:20px" src="venom.mp3" type="audio/mpeg" controls></audio>
+ <video class="msg" width="184" height="202" controls autoplay><source src="msg.mp4" type="video/mp4"></video> <audio class="venom" style="width:230px;height:20px" src="venom.mp3" type="audio/mpeg" controls></audio>
  <img src="dragon.png" class="dragon" width="210" length="680"/>   
  <img src="rick.png" class="rick" width="400" length="680"/>  
  <img src="korean.png" class="korean" width="193" length="680"/>  
