--- a/page_3.html
+++ b/page_3.html
@@ -153,7 +153,7 @@ p.customfont {
     <img src="tab.png" class="tab" width="400" length="200"/>
     <img src="yellow.png" class="yellow" width="93" length="345"/>
     <img src="postit.png" class="postit" width="193" length="345"/>
-    <video class="sunvideo" width="300" height="300" controls><source src="sunnyvid.mp4" type="video/mp4"></video>
+    <video class="sunvideo" width="300" height="300" controls autoplay><source src="sunnyvid.mp4" type="video/mp4"></video>
     <img src="player.png" class="player" width="220" length="800"/>
     <img src="fineline.jpg" class="fineline" width="147" length="147"/>
     <audio class="finelinesong" style="width:190px;height:20px" src="fineline.mp3" type="audio/mpeg" controls></audio>
