--- a/page_4.html
+++ b/page_4.html
@@ -175,13 +175,11 @@ p.customfont {
  <img src="light.png" class="light" width="320" length="320"/>  
  <img src="purple.png" class="purple" width="160" length="460"/>
  <img src="pink.jpg" class="pink" width="300" length="460"/>
- <video class="couple" width="350" height="350" controls><source src="couple.mp4" type="video/mp4"></video>
+ <video class="couple" width="350" height="350" controls autoplay><source src="couple.mp4" type="video/mp4"></video>
  <img src="eye.jpg" class="eye" width="300" length="300"/>
  <img src="blue.png" class="blue" width="280" length="460"/>
  <img src="caution.png" class="caution" width="250" length="200"/>
 </div>
-
- <div style="position: absolute; bottom: 0; right: 10; width: 100px; text-align:right;"><font size = "2" font color = "black"><p class="customfont">made by Isabelle Canadine</p></font></div>
     
         </font>
     </body>
