--- a/page_5.html
+++ b/page_5.html
@@ -163,5 +163,5 @@ p.customfont {
     <audio class="heather" style="width:130px;height:15px" src="heather.mp3" type="audio/mpeg" controls></audio>
     <img src="lonely.png" class="lonely" width="200" length="200"/>
     <img src="recorder.png" class="camera" width="300" length="200"/>
-    <video class="video5" width="123" height="70" controls><source src="crying.mp4" type="video/mp4"></video>
+    <video class="video5" width="123" height="70" controls autoplay><source src="crying.mp4" type="video/mp4"></video>
     <img src="tag.png" class="tag" width="200" length="200"/>
