--- a/page_6.html
+++ b/page_6.html
@@ -140,5 +140,5 @@ p.customfont {
     <img src="juke.png" class="juke"  width="350" length="680"/>
     <img src="moonlight.gif" class="moonlight"  width="200" length="680"/>
     <img src="tvstencil.png" class="tvstencil"  width="320" length="680"/>
-    <video class="never" width="202" height="114" controls><source src="never.mp4" type="video/mp4"></video>
+    <video class="never" width="202" height="114" controls autoplay><source src="never.mp4" type="video/mp4"></video>
     <audio class="young" style="width:400px;height:50px" src="young.mp3" type="audio/mpeg" controls></audio>
