--- a/page_7.html
+++ b/page_7.html
@@ -141,6 +141,6 @@ p.customfont {
     <img src="away.gif" class="away"  width="300" length="680"/>
     <img src="paint.png" class="paint"  width="400" length="680"/>
     <img src="L.png" class="L"  width="200" length="680"/>
-    <video class="midvid" width="243" height="243" controls><source src="midvid.mp4" type="video/mp4"></video>
+    <video class="midvid" width="243" height="243" controls autoplay><source src="midvid.mp4" type="video/mp4"></video>
     <audio class="tied" style="width:400px;height:50px" src="tied.mp3" type="audio/mpeg" controls></audio>
     <img src="statue.png" class="statue"  width="200" length="680"/>
