--- a/page_8.html
+++ b/page_8.html
@@ -132,6 +132,6 @@ p.customfont {
     <img src="ocean.webp" class="ocean"  width="350" length="680"/>
     <img src="mirror.png" class="mirror"  width="400" length="680"/>
     <img src="cry.webp" class="cry"  width="300" length="680"/>
-    <video class="lightning" width="190" height="190" controls><source src="lightning.mp4" type="video/mp4"></video>
+    <video class="lightning" width="190" height="190" controls autoplay><source src="lightning.mp4" type="video/mp4"></video>
     <audio class="jealous" style="width:400px;height:50px" src="jealous.mp3" type="audio/mpeg" controls></audio>
     <img src="norain.png" class="norain"  width="440" length="680"/>
