--- a/page_9.html
+++ b/page_9.html
@@ -158,7 +158,7 @@ p.customfont {
     <img src="meaningless.png" class="meaningless"  width="250" length="680"/>
     <img src="till.gif" class="till"  width="200" length="680"/>
     <img src="runn.gif" class="runn"  width="206" length="680"/>
-    <video class="heartbroken" width="290" height="170" controls><source src="heartbroken.mp4" type="video/mp4"></video>
+    <video class="heartbroken" width="290" height="170" controls autoplay><source src="heartbroken.mp4" type="video/mp4"></video>
     <audio class="byyou" style="width:400px;height:50px" src="byyou.mp3" type="audio/mpeg" controls></audio>
     <img src="everything.gif" class="everything"  width="400" length="680"/>
     
