--- a/page_5.html
+++ b/page_5.html
@@ -11,7 +11,7 @@ body {
 
  <head>
   <title>ADVENTURES AT MIDNIGHT</title>
-     
+     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     
     <style>
     .flip-horizontally 
